# build-me-an-advanced-autonomous-ai

./: .env.example  .gitignore  README.md  README2.md  bootstrap.ps1  pyproject.toml
src/autonomous_assistant/: __init__.py  __main__.py  api.py  assistant.py  cli.py  config.py  memory.py  models.py  reasoning.py  router.py  utils.py
src/autonomous_assistant/providers/: anthropic.py  base.py  openai_compatible.py
src/autonomous_assistant/tools/: __init__.py  base.py  filesystem.py  http_request.py  python_exec.py  registry.py  shell.py  web_search.py
tests/: test_assistant.py  test_tools.py
