[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-assistant"
version = "0.1.0"
description = "Advanced autonomous AI assistant with planning, tool orchestration, memory, and multi-model routing."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "typer>=0.12.3,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
autonomous-assistant = "autonomous_assistant.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

